fix: Fixed overflow bug in profile view

--- a/solardoc/frontend/src/assets/page-content.scss
+++ b/solardoc/frontend/src/assets/page-content.scss
@@ -30,12 +30,5 @@
     width: unset;
     min-width: 60vw;
     max-width: 80vw;
-
-    @media screen and (max-width: var.$window-medium) {
-      & {
-        min-width: 80vw;
-        max-width: 95vw;
-      }
-    }
   }
 }
